add exclude support when drawing ip and add stress tests
