# gen/openapiv2/serverpb/server.swagger.json
@@ -1162,6 +1162,10 @@
         "sequential": {
           "type": "boolean",
           "title": "Default false i.e. randomized"
+        },
+        "exclude": {
+          "type": "string",
+          "description": "IPv4 prefix to exclude from allocation (e.g., \"10.0.0.0/24\"). Optional."
         }
       }
     },
